--- a/BlokeeAutomation/BlokusApplication/GameRoom/PlayGame.xaml
+++ b/BlokeeAutomation/BlokusApplication/GameRoom/PlayGame.xaml
@@ -7,7 +7,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1185.6,3398.4</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>952.8,3589.6</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>PlayGame_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="33">
@@ -78,10 +78,9 @@
       <AssemblyReference>Newtonsoft.Json</AssemblyReference>
       <AssemblyReference>UiPath.Web.Activities</AssemblyReference>
       <AssemblyReference>Blokee.Activities</AssemblyReference>
-      <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="PlayGame" sap:VirtualizedContainerService.HintSize="963.2,3293.6" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="PlayGame" sap:VirtualizedContainerService.HintSize="963.2,3524.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:Boolean" Name="gameOver" />
       <Variable x:TypeArguments="x:Int32" Name="playerIndex" />
@@ -124,9 +123,9 @@
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="921.6,92.8" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Player Index in current game: &quot; + PlayerIndex.ToString]" />
-    <ui:InterruptibleWhile DisplayName="While the game is not finished" sap:VirtualizedContainerService.HintSize="921.6,2744" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
+    <ui:InterruptibleWhile DisplayName="While the game is not finished" sap:VirtualizedContainerService.HintSize="921.6,2975.2" sap2010:WorkflowViewState.IdRef="InterruptibleWhile_1">
       <ui:InterruptibleWhile.Body>
-        <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="886.4,2576.8" sap2010:WorkflowViewState.IdRef="Sequence_2">
+        <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="886.4,2808" sap2010:WorkflowViewState.IdRef="Sequence_2">
           <Sequence.Variables>
             <Variable x:TypeArguments="x:String" Name="result" />
             <Variable x:TypeArguments="njl:JObject" Name="BlokusStatus" />
@@ -222,17 +221,36 @@
             </ui:ForEach.Body>
           </ui:ForEach>
           <ba:PlayBlokeeMove AvailablePieces="[pieceAvailability]" BoardJson="[BlokusStatus(&quot;gameBoard&quot;).ToString.Replace(vbCrLf ,&quot;&quot;)]" Column="[positionY]" DisplayName="Play blokee move" sap:VirtualizedContainerService.HintSize="844.8,22.4" sap2010:WorkflowViewState.IdRef="PlayBlokeeMove_1" MoveExists="[moveExists]" Orientation="[orientation]" PieceId="[pieceIndex]" PlayerId="[playerIndex]" Row="[positionX]" />
-          <ui:WriteTextFile DisplayName="Write The Map" FileName="map.json" sap:VirtualizedContainerService.HintSize="844.8,134.4" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[&quot;map ='&quot; +BlokusStatus(&quot;gameBoard&quot;).ToString.Replace(vbCrLf ,&quot;&quot;) +&quot;';&quot;]">
-            <sap:WorkflowViewStateService.ViewState>
-              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                <x:Boolean x:Key="IsPinned">False</x:Boolean>
-              </scg:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-          </ui:WriteTextFile>
+          <TryCatch DisplayName="Try To Write" sap:VirtualizedContainerService.HintSize="844.8,365.6" sap2010:WorkflowViewState.IdRef="TryCatch_1">
+            <TryCatch.Try>
+              <ui:WriteTextFile DisplayName="Write The Map" FileName="map.json" sap:VirtualizedContainerService.HintSize="333.6,134.4" sap2010:WorkflowViewState.IdRef="WriteTextFile_1" Text="[&quot;map ='&quot; +BlokusStatus(&quot;gameBoard&quot;).ToString.Replace(vbCrLf ,&quot;&quot;) +&quot;';&quot;]">
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
+              </ui:WriteTextFile>
+            </TryCatch.Try>
+            <TryCatch.Catches>
+              <Catch x:TypeArguments="s:Exception" sap:VirtualizedContainerService.HintSize="403.2,22.4" sap2010:WorkflowViewState.IdRef="Catch`1_1">
+                <sap:WorkflowViewStateService.ViewState>
+                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                    <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                    <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                  </scg:Dictionary>
+                </sap:WorkflowViewStateService.ViewState>
+                <ActivityAction x:TypeArguments="s:Exception">
+                  <ActivityAction.Argument>
+                    <DelegateInArgument x:TypeArguments="s:Exception" Name="exception" />
+                  </ActivityAction.Argument>
+                </ActivityAction>
+              </Catch>
+            </TryCatch.Catches>
+          </TryCatch>
           <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="844.8,22.4" sap2010:WorkflowViewState.IdRef="CommentOut_3">
             <ui:CommentOut.Body>
-              <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="376,252.8" sap2010:WorkflowViewState.IdRef="Sequence_6">
+              <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="375.2,252.8" sap2010:WorkflowViewState.IdRef="Sequence_6">
                 <sap:WorkflowViewStateService.ViewState>
                   <scg:Dictionary x:TypeArguments="x:String, x:Object">
                     <x:Boolean x:Key="IsExpanded">True</x:Boolean>
