--- a/BlokeeAutomation/Main.xaml
+++ b/BlokeeAutomation/Main.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Main" this:Main.in_CPUPlayers="2" this:Main.in_RoomToJoin="875" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Main" this:Main.in_CPUPlayers="3" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="in_CPUPlayers" Type="InArgument(x:Int32)" />
     <x:Property Name="in_RoomToJoin" Type="InArgument(x:String)" />
@@ -6,7 +6,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>785.333333333333,1925.33333333333</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>785.333333333333,2146.66666666667</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="62">
@@ -83,7 +83,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap:VirtualizedContainerService.HintSize="795.555555555556,1860.44444444444" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence sap:VirtualizedContainerService.HintSize="795.555555555556,2081.77777777778" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="scg:Dictionary(x:String, x:Object)" Name="Config" />
       <Variable x:TypeArguments="ui:UiElement" Name="BlokusBrowser" />
@@ -98,7 +98,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence DisplayName="Init The Game" sap:VirtualizedContainerService.HintSize="753.777777777778,556.888888888889" sap2010:WorkflowViewState.IdRef="Sequence_2">
+    <Sequence DisplayName="Init The Game" sap:VirtualizedContainerService.HintSize="753.777777777778,494.666666666667" sap2010:WorkflowViewState.IdRef="Sequence_2">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -113,61 +113,20 @@
       </ui:InvokeWorkflowFile>
       <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke OpenBlokusSite workflow" sap:VirtualizedContainerService.HintSize="333.777777777778,113.777777777778" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\OpenBlokusSite.xaml">
         <ui:InvokeWorkflowFile.Arguments>
-          <InArgument x:TypeArguments="x:String" x:Key="in_URL">
-            <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="Path.Combine(Config(&quot;Blokus_URL_General&quot;).ToString,&quot;welcome&quot;)" />
-          </InArgument>
-          <OutArgument x:TypeArguments="ui:UiElement" x:Key="out_BrowserWindow">
-            <mva:VisualBasicReference x:TypeArguments="ui:UiElement" ExpressionText="BlokusBrowser" />
-          </OutArgument>
-          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-            <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="Config" />
-          </InArgument>
-          <OutArgument x:TypeArguments="x:String" x:Key="out_UserName">
-            <mva:VisualBasicReference x:TypeArguments="x:String" ExpressionText="CurrentUserName" />
-          </OutArgument>
-          <OutArgument x:TypeArguments="x:Boolean" x:Key="out_GameInProgress">
-            <mva:VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="GameInProgress" />
-          </OutArgument>
+          <InArgument x:TypeArguments="x:String" x:Key="in_URL">[Path.Combine(Config("Blokus_URL_General").ToString,"welcome")]</InArgument>
+          <OutArgument x:TypeArguments="ui:UiElement" x:Key="out_BrowserWindow">[BlokusBrowser]</OutArgument>
+          <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[Config]</InArgument>
+          <OutArgument x:TypeArguments="x:String" x:Key="out_UserName">[CurrentUserName]</OutArgument>
+          <OutArgument x:TypeArguments="x:Boolean" x:Key="out_GameInProgress">[GameInProgress]</OutArgument>
         </ui:InvokeWorkflowFile.Arguments>
       </ui:InvokeWorkflowFile>
       <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="333.777777777778,94.6666666666667" sap2010:WorkflowViewState.IdRef="LogMessage_4" Level="Info" Message="[&quot;Current User: &quot; + CurrentUserName + Environment.NewLine + &quot;InProgress: &quot; + GameInProgress.ToString]" />
-      <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="333.777777777778,22.2222222222222" sap2010:WorkflowViewState.IdRef="CommentOut_3">
-        <ui:CommentOut.Body>
-          <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="386.222222222222,489.777777777778" sap2010:WorkflowViewState.IdRef="Sequence_8">
-            <sap:WorkflowViewStateService.ViewState>
-              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-              </scg:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-            <ui:InputDialog Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="344.444444444444,243.555555555556" sap2010:WorkflowViewState.IdRef="InputDialog_1" IsPassword="False" Label="Give me the room number" Title="Let's play Blokus: https://blokee.mattle.online/">
-              <ui:InputDialog.Result>
-                <OutArgument x:TypeArguments="x:String">[RoomNo]</OutArgument>
-              </ui:InputDialog.Result>
-              <sap:WorkflowViewStateService.ViewState>
-                <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                  <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
-                </scg:Dictionary>
-              </sap:WorkflowViewStateService.ViewState>
-            </ui:InputDialog>
-            <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke JoinRoom workflow" sap:VirtualizedContainerService.HintSize="344.444444444444,113.777777777778" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\Lobby\old_JoinRoom.xaml">
-              <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="ui:UiElement" x:Key="in_BrowserWindow">[BlokusBrowser]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="in_RoomNo">[RoomNo]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="in_RoomURL">[RoomURL]</InArgument>
-                <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[Config]</InArgument>
-              </ui:InvokeWorkflowFile.Arguments>
-            </ui:InvokeWorkflowFile>
-          </Sequence>
-        </ui:CommentOut.Body>
-        <sap:WorkflowViewStateService.ViewState>
-          <scg:Dictionary x:TypeArguments="x:String, x:Object">
-            <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-            <x:Boolean x:Key="IsPinned">False</x:Boolean>
-          </scg:Dictionary>
-        </sap:WorkflowViewStateService.ViewState>
-      </ui:CommentOut>
     </Sequence>
+    <ui:InputDialog Label="{x:Null}" Options="{x:Null}" OptionsString="{x:Null}" DisplayName="Input Dialog" sap:VirtualizedContainerService.HintSize="753.777777777778,243.555555555556" sap2010:WorkflowViewState.IdRef="InputDialog_2" IsPassword="False" Title="Room number?">
+      <ui:InputDialog.Result>
+        <OutArgument x:TypeArguments="x:String">[in_RoomToJoin]</OutArgument>
+      </ui:InputDialog.Result>
+    </ui:InputDialog>
     <Flowchart sap:VirtualizedContainerService.HintSize="753.777777777778,636.444444444444" sap2010:WorkflowViewState.IdRef="Flowchart_1">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -182,40 +141,42 @@
       <Flowchart.StartNode>
         <x:Reference>__ReferenceID4</x:Reference>
       </Flowchart.StartNode>
-      <FlowDecision x:Name="__ReferenceID4" DisplayName="GameInProgress?" sap:VirtualizedContainerService.HintSize="96.8888888888889,87.1111111111111" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
-        <FlowDecision.Condition>
-          <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="GameInProgress" />
-        </FlowDecision.Condition>
+      <FlowDecision x:Name="__ReferenceID4" Condition="[GameInProgress]" DisplayName="GameInProgress?" sap:VirtualizedContainerService.HintSize="96.8888888888889,87.1111111111111" sap2010:WorkflowViewState.IdRef="FlowDecision_1">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <av:Point x:Key="ShapeLocation">251.555555555556,127.611111111111</av:Point>
             <av:Size x:Key="ShapeSize">96.8888888888889,87.1111111111111</av:Size>
             <av:PointCollection x:Key="FalseConnector">348.444444444444,171.166666666667 430,171.166666666667 430,266.444444444444</av:PointCollection>
-            <av:PointCollection x:Key="TrueConnector">251.555555555556,171.166666666667 120,171.166666666667 120,233.555555555556</av:PointCollection>
+            <av:PointCollection x:Key="TrueConnector">251.555555555556,171.166666666667 100,171.166666666667 100,283.555555555556</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
         <FlowDecision.True>
           <FlowStep x:Name="__ReferenceID3">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <av:Point x:Key="ShapeLocation">20,233.555555555556</av:Point>
+                <av:Point x:Key="ShapeLocation">0,283.555555555556</av:Point>
                 <av:Size x:Key="ShapeSize">200,52.8888888888889</av:Size>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="200,52.8888888888889" sap2010:WorkflowViewState.IdRef="LogMessage_6" Message="[&quot;Resuming gameplay...&quot;]">
+            <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke ReopenRoom workflow" sap:VirtualizedContainerService.HintSize="200,52.8888888888889" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_16" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\GameRoom\ReopenRoom.xaml">
+              <ui:InvokeWorkflowFile.Arguments>
+                <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
+                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="Config" />
+                </InArgument>
+                <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">
+                  <mva:VisualBasicReference x:TypeArguments="ui:UiElement" ExpressionText="BlokusBrowser" />
+                </InOutArgument>
+              </ui:InvokeWorkflowFile.Arguments>
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
-            </ui:LogMessage>
+            </ui:InvokeWorkflowFile>
           </FlowStep>
         </FlowDecision.True>
         <FlowDecision.False>
-          <FlowDecision x:Name="__ReferenceID0" DisplayName="Create Game?" sap:VirtualizedContainerService.HintSize="79.5555555555556,87.1111111111111" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
-            <FlowDecision.Condition>
-              <mva:VisualBasicValue x:TypeArguments="x:Boolean" ExpressionText="string.IsNullOrWhiteSpace(in_RoomToJoin)" />
-            </FlowDecision.Condition>
+          <FlowDecision x:Name="__ReferenceID0" Condition="[string.IsNullOrWhiteSpace(in_RoomToJoin)]" DisplayName="Create Game?" sap:VirtualizedContainerService.HintSize="79.5555555555556,87.1111111111111" sap2010:WorkflowViewState.IdRef="FlowDecision_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -235,15 +196,9 @@
                 </sap:WorkflowViewStateService.ViewState>
                 <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke CreateGame workflow" sap:VirtualizedContainerService.HintSize="200,52.8888888888889" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_13" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\Lobby\CreateGame.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
-                    <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-                      <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="Config" />
-                    </InArgument>
-                    <InArgument x:TypeArguments="x:Int32" x:Key="in_CPUPlayers">
-                      <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="in_CPUPlayers" />
-                    </InArgument>
-                    <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">
-                      <mva:VisualBasicReference x:TypeArguments="ui:UiElement" ExpressionText="BlokusBrowser" />
-                    </InOutArgument>
+                    <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[Config]</InArgument>
+                    <InArgument x:TypeArguments="x:Int32" x:Key="in_CPUPlayers">[in_CPUPlayers]</InArgument>
+                    <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">[BlokusBrowser]</InOutArgument>
                   </ui:InvokeWorkflowFile.Arguments>
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -263,15 +218,9 @@
                 </sap:WorkflowViewStateService.ViewState>
                 <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke JoinRoomAsGuest workflow" sap:VirtualizedContainerService.HintSize="200,52.8888888888889" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_14" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\Lobby\JoinRoomAsGuest.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
-                    <InArgument x:TypeArguments="x:String" x:Key="in_RoomNo">
-                      <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_RoomToJoin" />
-                    </InArgument>
-                    <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-                      <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="Config" />
-                    </InArgument>
-                    <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">
-                      <mva:VisualBasicReference x:TypeArguments="ui:UiElement" ExpressionText="BlokusBrowser" />
-                    </InOutArgument>
+                    <InArgument x:TypeArguments="x:String" x:Key="in_RoomNo">[in_RoomToJoin]</InArgument>
+                    <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[Config]</InArgument>
+                    <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">[BlokusBrowser]</InOutArgument>
                   </ui:InvokeWorkflowFile.Arguments>
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
@@ -291,12 +240,8 @@
     </Flowchart>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="Invoke WaitForRoomLoad workflow" sap:VirtualizedContainerService.HintSize="753.777777777778,113.777777777778" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_15" LogEntry="No" LogExit="No" UnSafe="False" WorkflowFileName="BlokusApplication\GameRoom\WaitForRoomLoad.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-          <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="Config" />
-        </InArgument>
-        <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">
-          <mva:VisualBasicReference x:TypeArguments="ui:UiElement" ExpressionText="BlokusBrowser" />
-        </InOutArgument>
+        <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[Config]</InArgument>
+        <InOutArgument x:TypeArguments="ui:UiElement" x:Key="io_BrowserWindow">[BlokusBrowser]</InOutArgument>
       </ui:InvokeWorkflowFile.Arguments>
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
